Fixed character frame and panel overlap on grid 1 (#12)
* reversed grid-1 via CSS.

* reversed grid-1 in the Grid class.

* simplified the CSS rules of Dreamfield.css.

* renamed html classes player and pl into playerContainer and playerImg respectivly.

* refactored row reveresal forloop to forEach.

--- a/CSS/Gameplay_Screen/Dreamfield.css
+++ b/CSS/Gameplay_Screen/Dreamfield.css
@@ -5,25 +5,24 @@
     top: 35%;
     width: 100%;
     height: 36.398%;
-    /* border: red 1px solid; */
-    z-index: 0;
 }
 
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    width: 49.999%;
+    width: 50%;
     height: 100%;
-    overflow: visible;
-    /* border: crimson dashed 1px; */
-    column-gap: 2.5px;
-    row-gap: 0px;
+    column-gap: 0.5%;
+    row-gap: 0.25%;
+}
+
+#grid-1 {
+    transform: scaleX(-1);
 }
 
 #grid-1>.panel {
     background-image: url("../../Images/tile_red.png");
-    transform: scaleX(-1);
 }
 
 #grid-2>.panel {
@@ -33,33 +32,18 @@
 .panel {
     background-size: cover;
     background-repeat: no-repeat;
-    /* position: sticky; */
-    /* margin-top: -5px; */
-    /* width: 52px;
-  height: 21px; */
-    /* padding: 0px; */
-    /* width: 33.33%;
-  height: 36.196%; */
-    /* overflow: visible; */
-    /* border: blue solid 5px; */
     width: 102.0%;
     height: 110.5%;
 }
 
-.player {
+.playerContainer {
     position: relative;
-    width: 50px;
-    height: 50px;
-    /* z-index: 9999; */
-    overflow: visible;
-    /* margin:-100%; */
+    width: 98%;
+    height: 89.5%;
 }
 
-.pl {
+.playerImg {
     position: absolute;
-    /* width: 800%;
-  height: 750%; */
-    left: -1150%;
-    top: -550%;
-    /* z-index: 9999; */
+    left: -240%;
+    top: -235%;
 }
